<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/post"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="avatar"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        android:text="@string/netology_header"

        app:layout_constraintEnd_toStartOf="@id/more"
        app:layout_constraintBottom_toTopOf="@id/published_data"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:layout_editor_absoluteX="68dp" />

    <TextView
        android:id="@+id/favourite_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/favourite_count"
        app:layout_constraintBottom_toBottomOf="@+id/favourite"
        app:layout_constraintStart_toEndOf="@+id/favourite"
        app:layout_constraintTop_toTopOf="@+id/favourite" />

    <TextView
        android:id="@+id/share_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/share_count"
        app:layout_constraintBottom_toBottomOf="@+id/share_view"
        app:layout_constraintStart_toEndOf="@+id/share_view"
        app:layout_constraintTop_toTopOf="@+id/share_view" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:text="@string/view_count"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/published_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/post_date"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        tools:layout_editor_absoluteX="163dp" />


    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="more"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@+id/published_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="favourite"
        android:src="@drawable/favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="10dp"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/share_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:contentDescription="more"
        android:src="@drawable/share_view"
        app:layout_constraintBottom_toBottomOf="@+id/favourite"
        app:layout_constraintStart_toEndOf="@+id/favourite_count"
        app:layout_constraintTop_toTopOf="@+id/favourite"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="more"
        android:src="@drawable/views"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/share_view"
        app:layout_constraintEnd_toStartOf="@+id/view_count"
        app:layout_constraintTop_toTopOf="@+id/share_view"
        tools:ignore="HardcodedText" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published_data,more"
         />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="favourite,favourite_count,share_view,share_count,view_count,imageView"
         />


</androidx.constraintlayout.widget.ConstraintLayout>